--- a/nowplaying.html
+++ b/nowplaying.html
@@ -41,10 +41,10 @@
             <article>
                 <a style="width: 20px;" href="movie.html">
                     <img class="movie_poster" src="Images/nowplaying_poster1.png" alt="Suzume poster">
-                    <span class="article-text">Suzume</span>
+                    <span>Suzume</span>
                 </a>
                 <a href="https://www.imdb.com/title/tt16428256/?ref_=nv_sr_srsg_3_tt_4_nm_4_q_Suzu">
-                    <img src="Images/imdb_icon.png" alt="imdb rating" style="height: 20px;">7.7
+                    <img src="Images/imdb_icon.png" alt="imdb rating" class="rating_icon">7.7
                 </a>
                 <a href="https://www.rottentomatoes.com/m/suzume">
                     <img src="Images/rotten_tomatos_icon.png" alt="rotten tomato rating" style="height: 20px;">96%
@@ -52,7 +52,8 @@
             </article>
             <article>
                 <a href="movie.html">
-                    <img src="Images/nowplaying_poster2.png" class="movie_poster" alt="Elemental poster">Elemental
+                    <img src="Images/nowplaying_poster2.png" class="movie_poster" alt="Elemental poster">
+                    <span>Elemental</span>
                 </a>
                 <a href="https://www.imdb.com/title/tt15789038/?ref_=nv_sr_srsg_0_tt_2_nm_6_q_ele">
                     <img src="Images/imdb_icon.png" alt="imdb rating" style="height: 20px;">7.0
@@ -63,7 +64,8 @@
             </article>
             <article>
                 <a href="movie.html">
-                    <img src="Images/nowplaying_poster3.png" class="movie_poster" alt="The NUN poster">The NUN
+                    <img src="Images/nowplaying_poster3.png" class="movie_poster" alt="The NUN poster">
+                    <span>The NUN</span>
                 </a>
                 <a href="https://www.imdb.com/title/tt10160976/?ref_=nv_sr_srsg_2_tt_6_nm_0_q_the%2520nun">
                     <img src="Images/imdb_icon.png" alt="imdb rating" style="height: 20px;">5.8
@@ -74,12 +76,14 @@
             </article>
             <article>
                 <a href="movie.html">
-                    <img src="Images/nowplaying_poster4.png" class="movie_poster" alt="Будилаан poster">Будилаан
+                    <img src="Images/nowplaying_poster4.png" class="movie_poster" alt="Будилаан poster">
+                    <span>Будилаан</span>
                 </a>
             </article>
             <article>
                 <a href="movie.html">
-                    <img src="Images/comingsoon_poster1.png" class="movie_poster" alt="The Creator poster">The Creator
+                    <img src="Images/comingsoon_poster1.png" class="movie_poster" alt="The Creator poster">
+                    <span>The Creator</span>
                 </a>
                 <a href="https://www.imdb.com/title/tt11858890/?ref_=nv_sr_srsg_0_tt_7_nm_1_q_the%2520crea">
                     <img src="Images/imdb_icon.png" alt="imdb rating" style="height: 20px;">7.2
@@ -90,7 +94,8 @@
             </article>
             <article>
                 <a href="movie.html">
-                    <img src="Images/comingsoon_poster2.png" class="movie_poster" alt="Paw Patrol poster">Paw Patrol
+                    <img src="Images/comingsoon_poster2.png" class="movie_poster" alt="Paw Patrol poster">
+                    <span>Paw Patrol</span>
                 </a>
                 <a href="https://www.imdb.com/title/tt15837338/?ref_=nv_sr_srsg_0_tt_8_nm_0_q_paw%2520patrol">
                     <img src="Images/imdb_icon.png" alt="imdb rating" style="height: 20px;">6.1
@@ -101,7 +106,8 @@
             </article>
             <article>
                 <a href="movie.html">
-                    <img src="Images/comingsoon_poster3.png" class="movie_poster" alt="Cobweb poster">Cobweb
+                    <img src="Images/comingsoon_poster3.png" class="movie_poster" alt="Cobweb poster">
+                    <span>Cobweb</span>
                 </a>
                 <a href="https://www.imdb.com/title/tt9100018/?ref_=nv_sr_srsg_1_tt_6_nm_1_q_cobwe">
                     <img src="Images/imdb_icon.png" alt="imdb rating" style="height: 20px;">5.9
@@ -112,7 +118,8 @@
             </article>
             <article>
                 <a href="movie.html">
-                    <img src="Images/comingsoon_poster4.png" class="movie_poster" alt="Saw X poster">Saw X
+                    <img src="Images/comingsoon_poster4.png" class="movie_poster" alt="Saw X poster">
+                    <span>Saw X</span>
                 </a>
                 <a href="https://www.imdb.com/title/tt21807222/?ref_=nv_sr_srsg_1_tt_7_nm_0_q_saw">
                     <img src="Images/imdb_icon.png" alt="imdb rating" style="height: 20px;">7.2
@@ -123,7 +130,8 @@
             </article>
             <article>
                 <a href="movie.html">
-                    <img src="Images/comingsoon_poster5.png" class="movie_poster" alt="The Exorcist poster">The Exorcist
+                    <img src="Images/comingsoon_poster5.png" class="movie_poster" alt="The Exorcist poster">
+                    <span>The Exorcist</span>
                 </a>
                 <a href="https://www.imdb.com/title/tt12921446/?ref_=nv_sr_srsg_4_tt_7_nm_0_q_the%2520exorcist">
                     <img src="Images/imdb_icon.png" alt="imdb rating" style="height: 20px;">7.1
