--- a/ticketing.html
+++ b/ticketing.html
@@ -445,33 +445,37 @@
             <img src="Images/nowplaying_poster1.png" alt="poster">
             <div id="movie_info">
                 <label for="movie_name">SUZUME</label>
-                <label for="info_movie">PG • 2 цаг 2 минут •  Адал явдал, Драм, Уран зөгнөлт •  2023.11.06</label>
+                <label for="info_movie">PG • 2 цаг 2 минут • 2023.11.06</label>
                 <label for="location">Салбар: Зайсан</label>
                 <label for="hall">Танхим: 3</label>
                 <label for="date">Он, сар, өдөр: 2023.11.17</label>
                 <label for="time">Хугацаа: 2:47 PM</label>
             </div>
         </article>
+        <div class="line"></div>
         <label for="chair">Таны суудал: F11 • F12 • F13</label>
-        <p>Тоо ширхэг</p>
-        <p>Тасалбарын үнэ</p>
+        <div class="line"></div>
         <ul>
             <li>
                 <p>Том хүн</p>
                 <button>-</button>
                 <span>0</span>
                 <button>+</button>
+                <p class="cost">60,000₮</p>
             </li>
             <li>
                 <p>Хүүхэд</p>
                 <button>-</button>
                 <span>0</span>
                 <button>+</button>
+                <p class="cost">60,000₮</p>
             </li>
         </ul>
+        <div class="line"></div>
         <p>Попкорн</p>
         <p>3</p>
         <p>15,000₮</p>
+        <div class="line"></div>
         <p>Нийт</p>
         <p>75,000₮</p>
     
